Utworzenie aplikacji webowej

--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/About">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  asp-page="/Contact">Contact</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Customers/Index">Customers</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://github.com/sulmar/vavatech-razor-pages-202110">GitHub</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
