--- a/WebApp/Pages/Shared/_SimpleLayout.cshtml
+++ b/WebApp/Pages/Shared/_SimpleLayout.cshtml
@@ -8,7 +8,31 @@
 
 <body>
 
-     <h1>Welcome</h1>
+     <header>
+         <nav class="navbar">
+             <ul>
+                 <li>
+                     <a asp-page="/Home">Home</a>
+                 </li>
+
+                 <li>
+                     <a asp-page="/Privacy">Privacy</a>
+                 </li>
+
+                 <li>
+                     <a asp-page="/About">About</a>
+                 </li>
+
+                 <li>
+                     <a asp-page="/Contact">Contact</a>
+                 </li>
+
+                 <li>
+                     <a class="nav-link text-dark" href="https://github.com/sulmar/vavatech-razor-pages-202110">GitHub</a>
+                 </li>
+             </ul>
+         </nav>
+     </header>
   
 
     <div>
