Wygenerowanie listy klientów

--- a/WebApp/Pages/Customers/Index.cshtml
+++ b/WebApp/Pages/Customers/Index.cshtml
@@ -9,6 +9,9 @@
         <tr>
             <th>Imię</th>
             <th>Nazwisko</th>
+            <th>Płeć</th>
+            <td>Wynagrodzenie</td>
+            <td>Usunięty</td>
         </tr>
     </thead>
 
@@ -19,6 +22,9 @@
             <tr>
                 <td>@customer.FirstName</td>
                 <td>@customer.LastName</td>
+                <td>@customer.Gender</td>
+                <td>@customer.Salary</td>
+                <td>@customer.IsRemoved</td>
             </tr>
 
         }
