--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Products/Index">Products</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link text-dark" href="https://github.com/sulmar/vavatech-razor-pages-202110">GitHub</a>
                         </li>
 
