Dodanie adresów do klienta

--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -11,27 +11,85 @@
         <input type="hidden" asp-for="@Model.Customer.Gender" />
         <input type="hidden" asp-for="@Model.Customer.IsRemoved" />
 
-        <div class="form-row">
+        <div>
+            <div class="form-row">
 
-            <div class="form-group col-md-6 col-sm-12">
-                <label asp-for="@Model.Customer.FirstName">Imię</label>
-                <input type="text" asp-for="@Model.Customer.FirstName" class="form-control" />
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.FirstName">Imię</label>
+                    <input type="text" asp-for="@Model.Customer.FirstName" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.LastName">Nazwisko</label>
+                    <input type="text" asp-for="@Model.Customer.LastName" class="form-control" />
+                </div>
             </div>
 
-            <div class="form-group col-md-6 col-sm-12">
-                <label asp-for="@Model.Customer.LastName">Nazwisko</label>
-                <input type="text" asp-for="@Model.Customer.LastName" class="form-control" />
+            <div class="form-row">
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.Gender">Płeć</label>
+                    <input type="text" asp-for="@Model.Customer.Gender" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.Salary">Salary</label>
+                    <input type="text" asp-for="@Model.Customer.Salary" class="form-control" />
+                </div>
             </div>
+
+            <div class="form-row">
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.InvoiceAddress.City">Miejscowość</label>
+                    <input type="text" asp-for="@Model.Customer.InvoiceAddress.City" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.InvoiceAddress.Street">Ulica</label>
+                    <input type="text" asp-for="@Model.Customer.InvoiceAddress.Street" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.InvoiceAddress.ZipCode">Kod pocztowy</label>
+                    <input type="text" asp-for="@Model.Customer.InvoiceAddress.ZipCode" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.InvoiceAddress.Country">Państwo</label>
+                    <input type="text" asp-for="@Model.Customer.InvoiceAddress.Country" class="form-control" />
+                </div>
+
+            </div>
+
+            <div class="form-row">
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.ShippedAddress.City">Miejscowość</label>
+                    <input type="text" asp-for="@Model.Customer.ShippedAddress.City" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.ShippedAddress.Street">Ulica</label>
+                    <input type="text" asp-for="@Model.Customer.ShippedAddress.Street" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.ShippedAddress.ZipCode">Kod pocztowy</label>
+                    <input type="text" asp-for="@Model.Customer.ShippedAddress.ZipCode" class="form-control" />
+                </div>
+
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="@Model.Customer.ShippedAddress.Country">Państwo</label>
+                    <input type="text" asp-for="@Model.Customer.ShippedAddress.Country" class="form-control" />
+                </div>
+
+            </div>
+
+            <button type="submit" class="btn btn-success btn-block">Zapisz</button>
         </div>
 
-        <div class="form-row">
-            <div class="form-group col-md-6 col-sm-12">
-                <label asp-for="@Model.Customer.Salary">Salary</label>
-                <input type="text" asp-for="@Model.Customer.Salary" class="form-control" />
-            </div>
-        </div>
 
-        <button type="submit" class="btn btn-success btn-block">Zapisz</button>
+
     </form>
 
 </div>
