--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -41,7 +41,17 @@
 
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.InvoiceAddress.City">Miejscowość</label>
-                    <input type="text" asp-for="@Model.Customer.InvoiceAddress.City" class="form-control" />
+                    @*<input type="text" asp-for="@Model.Customer.InvoiceAddress.City" class="form-control" />*@
+
+                <select asp-for="@Model.Customer.InvoiceAddress.City" class="form-control">
+
+                    @foreach (var city in Model.Cities)
+                    {
+                        <option value="@city">@city</option>
+                    }                    
+
+                </select>
+
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
@@ -64,8 +74,8 @@
             <div class="form-row">
 
                 <div class="form-group col-md-6 col-sm-12">
-                    <label asp-for="@Model.Customer.ShippedAddress.City">Miejscowość</label>
-                    <input type="text" asp-for="@Model.Customer.ShippedAddress.City" class="form-control" />
+                    <label asp-for="@Model.Customer.ShippedAddress.City">Miejscowość</label>                    
+                    <select asp-for="@Model.Customer.InvoiceAddress.City" asp-items="@Model.CityItems" class="form-control" ></select>
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
