--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -8,7 +8,6 @@
     <form method="post">
 
         <input type="hidden" asp-for="@Model.Customer.Id" />
-        <input type="hidden" asp-for="@Model.Customer.Gender" />
         <input type="hidden" asp-for="@Model.Customer.IsRemoved" />
 
         <div>
@@ -28,7 +27,9 @@
             <div class="form-row">
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.Gender">Płeć</label>
-                    <input type="text" asp-for="@Model.Customer.Gender" class="form-control" />
+                    <select asp-for="@Model.Customer.Gender" asp-items="Html.GetEnumSelectList<Vavatech.RazorPages.Models.Gender>()" class="form-control" >
+                        <option value="">Wybierz płeć</option>
+                    </select>
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
@@ -75,7 +76,7 @@
 
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.ShippedAddress.City">Miejscowość</label>                    
-                    <select asp-for="@Model.Customer.InvoiceAddress.City" asp-items="@Model.CityItems" class="form-control" ></select>
+                    <select asp-for="@Model.Customer.ShippedAddress.City" asp-items="@Model.CityItems" class="form-control" ></select>
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
@@ -93,6 +94,16 @@
                     <input type="text" asp-for="@Model.Customer.ShippedAddress.Country" class="form-control" />
                 </div>
 
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12 col-sm-12">
+                    <label asp-for="@Model.Customer.CustomerGroup.Id">Grupa klientów</label>
+                    @*<select asp-for="@Model.Customer.CustomerGroup.Id" asp-items="@Model.CustomerGroupItems" class="form-control"></select>*@
+                    <select asp-for="@Model.Customer.CustomerGroup.Id" asp-items="@Model.CustomerGroupList" class="form-control">
+                        <option value="">Wybierz grupę</option>
+                    </select>
+                </div>
             </div>
 
             <button type="submit" class="btn btn-success btn-block">Zapisz</button>
