--- a/WebApp/Pages/Products/Edit.cshtml
+++ b/WebApp/Pages/Products/Edit.cshtml
@@ -43,6 +43,11 @@
 
         </div>
 
+        <div class="form-row">
+            <label asp-for="@Model.SelectedTags">Tagi</label>
+            <select asp-for="@Model.SelectedTags" asp-items="@Model.TagList" class="form-control" ></select>
+        </div>
+
         <button type="submit" class="btn btn-success btn-block">Zapisz</button>
 
     </div>
