--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+ul.horizontal {
+    list-style: none;
+}
+
+ul.horizontal li {
+    display: inline-block;
+}
+
+ul.horizontal li:not(:last-child):after {
+    content: ", "
+}
