--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -16,11 +16,13 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.FirstName">Imię</label>
                     <input type="text" asp-for="@Model.Customer.FirstName" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.FirstName"  class="text-danger"></span>
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.LastName">Nazwisko</label>
                     <input type="text" asp-for="@Model.Customer.LastName" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.LastName" class="text-danger"></span>
                 </div>
             </div>
 
@@ -35,6 +37,15 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.Salary">Salary</label>
                     <input type="text" asp-for="@Model.Customer.Salary" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.Salary" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12 col-sm-12">
+                    <label asp-for="@Model.Customer.Email">Email</label>
+                    <input type="text" asp-for="@Model.Customer.Email" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.Email" class="text-danger"></span>
                 </div>
             </div>
 
@@ -109,7 +120,11 @@
             <button type="submit" class="btn btn-success btn-block">Zapisz</button>
         </div>
 
+        @section Scripts {
+            
+            <partial name="_ValidationScriptsPartial" />
 
+        }
 
     </form>
 
