--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -16,7 +16,7 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.FirstName">Imię</label>
                     <input type="text" asp-for="@Model.Customer.FirstName" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.FirstName"  class="text-danger"></span>
+                    <span asp-validation-for="@Model.Customer.FirstName" class="text-danger"></span>
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
@@ -29,7 +29,7 @@
             <div class="form-row">
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.Gender">Płeć</label>
-                    <select asp-for="@Model.Customer.Gender" asp-items="Html.GetEnumSelectList<Vavatech.RazorPages.Models.Gender>()" class="form-control" >
+                    <select asp-for="@Model.Customer.Gender" asp-items="Html.GetEnumSelectList<Vavatech.RazorPages.Models.Gender>()" class="form-control">
                         <option value="">Wybierz płeć</option>
                     </select>
                 </div>
@@ -43,9 +43,9 @@
 
             <div class="form-row">
                 <div class="form-group col-md-12 col-sm-12">
-                    <label asp-for="@Model.Customer.Email">Email</label>
-                    <input type="text" asp-for="@Model.Customer.Email" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.Email" class="text-danger"></span>
+                    <label asp-for="@Model.Email">Email</label>
+                    <input type="text" asp-for="@Model.Email" class="form-control" />
+                    <span asp-validation-for="@Model.Email" class="text-danger"></span>
                 </div>
             </div>
 
@@ -55,14 +55,14 @@
                     <label asp-for="@Model.Customer.InvoiceAddress.City">Miejscowość</label>
                     @*<input type="text" asp-for="@Model.Customer.InvoiceAddress.City" class="form-control" />*@
 
-                <select asp-for="@Model.Customer.InvoiceAddress.City" class="form-control">
+                    <select asp-for="@Model.Customer.InvoiceAddress.City" class="form-control">
 
-                    @foreach (var city in Model.Cities)
-                    {
-                        <option value="@city">@city</option>
-                    }                    
+                        @foreach (var city in Model.Cities)
+                        {
+                            <option value="@city">@city</option>
+                        }
 
-                </select>
+                    </select>
 
                 </div>
 
@@ -86,8 +86,8 @@
             <div class="form-row">
 
                 <div class="form-group col-md-6 col-sm-12">
-                    <label asp-for="@Model.Customer.ShippedAddress.City">Miejscowość</label>                    
-                    <select asp-for="@Model.Customer.ShippedAddress.City" asp-items="@Model.CityItems" class="form-control" ></select>
+                    <label asp-for="@Model.Customer.ShippedAddress.City">Miejscowość</label>
+                    <select asp-for="@Model.Customer.ShippedAddress.City" asp-items="@Model.CityItems" class="form-control"></select>
                 </div>
 
                 <div class="form-group col-md-6 col-sm-12">
@@ -121,7 +121,7 @@
         </div>
 
         @section Scripts {
-            
+
             <partial name="_ValidationScriptsPartial" />
 
         }
