--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -50,6 +50,15 @@
             </div>
 
             <div class="form-row">
+                <div class="form-group col-md-12 col-sm-12">
+                    <label asp-for="@Model.Website">Website</label>
+                    <input type="text" asp-for="@Model.Website" class="form-control" />
+                    <span asp-validation-for="@Model.Website" class="text-danger"></span>
+                </div>
+            </div>
+
+
+            <div class="form-row">
 
                 <div class="form-group col-md-6 col-sm-12">
                     <label asp-for="@Model.Customer.InvoiceAddress.City">Miejscowość</label>
