--- a/WebApp/Pages/Products/Edit.cshtml
+++ b/WebApp/Pages/Products/Edit.cshtml
@@ -7,7 +7,6 @@
 <form method="post">
 
     <input type="hidden" asp-for="@Model.Product.Id" />
-    <input type="hidden" asp-for="@Model.Product.BarCode" />
 
     <div>
 
@@ -15,11 +14,13 @@
             <div class="form-group col-md-6 col-sm-12">
                 <label asp-for="@Model.Product.Name">Nazwa</label>
                 <input type="text" asp-for="@Model.Product.Name" class="form-control" />
+                <span asp-validation-for="@Model.Product.Name" class="text-danger"></span>
             </div>
 
             <div class="form-group col-md-6 col-sm-12">
                 <label asp-for="@Model.Product.Color">Kolor</label>
                 <input type="text" asp-for="@Model.Product.Color" class="form-control" />
+                <span asp-validation-for="@Model.Product.Color" class="text-danger"></span>
             </div>
         </div>
 
@@ -28,11 +29,38 @@
             <div class="form-group col-md-6 col-sm-12">
                 <label asp-for="@Model.Product.Size">Rozmiar</label>
                 <input type="text" asp-for="@Model.Product.Size" class="form-control" />
+                <span asp-validation-for="@Model.Product.Size" class="text-danger"></span>
             </div>
 
             <div class="form-group col-md-6 col-sm-12">
                 <label asp-for="@Model.Product.UnitPrice">Cena</label>
                 <input type="text" asp-for="@Model.Product.UnitPrice" class="form-control" />
+                <span asp-validation-for="@Model.Product.UnitPrice" class="text-danger"></span>
+            </div>
+
+        </div>
+
+        <div class="form-row">
+
+            <div class="form-group col-md-6 col-sm-12">
+                <label asp-for="@Model.Product.BarCode">Kod kreskowy</label>
+                <input type="text" asp-for="@Model.Product.BarCode" class="form-control" />
+                <span asp-validation-for="@Model.Product.BarCode" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div class="form-row">
+
+            <div class="form-group col-md-6 col-sm-12">
+                <label asp-for="@Model.Product.FromTemperature">Dolny zakres temperatury</label>
+                <input type="text" asp-for="@Model.Product.FromTemperature" class="form-control" />
+                <span asp-validation-for="@Model.Product.FromTemperature" class="text-danger"></span>
+            </div>
+
+            <div class="form-group col-md-6 col-sm-12">
+                <label asp-for="@Model.Product.ToTemperature">Górny zakres temperatury</label>
+                <input type="text" asp-for="@Model.Product.ToTemperature" class="form-control" />
+                <span asp-validation-for="@Model.Product.ToTemperature" class="text-danger"></span>
             </div>
 
         </div>
@@ -45,11 +73,17 @@
 
         <div class="form-row">
             <label asp-for="@Model.SelectedTags">Tagi</label>
-            <select asp-for="@Model.SelectedTags" asp-items="@Model.TagList" class="form-control" ></select>
+            <select asp-for="@Model.SelectedTags" asp-items="@Model.TagList" class="form-control"></select>
         </div>
 
         <button type="submit" class="btn btn-success btn-block">Zapisz</button>
 
     </div>
+
+    @section Scripts {
+
+        <partial name="_ValidationScriptsPartial" />
+
+    }
 
 </form>
