--- a/WebApp/Pages/Customers/Edit.cshtml
+++ b/WebApp/Pages/Customers/Edit.cshtml
@@ -126,6 +126,8 @@
                 </div>
             </div>
 
+
+
             <button type="submit" class="btn btn-success btn-block">Zapisz</button>
         </div>
 
@@ -135,6 +137,11 @@
 
         }
 
+    </form>
+
+
+    <form method="post" asp-page-handler="Send" >
+        <button type="submit" class="btn btn-secondary btn-block">Send</button>
     </form>
 
 </div>
