--- a/WebApp/Pages/Products/Index.cshtml
+++ b/WebApp/Pages/Products/Index.cshtml
@@ -4,6 +4,43 @@
 }
 
 
+
+<form method="get">
+
+    <div>
+        <div class="form-row">
+
+            <div class="form-group col-md-6 col-sm-12">
+                <label asp-for="@Model.SearchCriteria.Color">Kolor</label>
+                <input type="text" asp-for="@Model.SearchCriteria.Color" class="form-control" />
+                <span asp-validation-for="@Model.SearchCriteria.Color" class="text-danger"></span>
+            </div>
+
+        </div>
+
+        <div class="form-row">
+
+            <div class="form-group col-md-6 col-sm-12">
+                <label asp-for="@Model.SearchCriteria.UnitPriceFrom">Od kwoty</label>
+                <input type="text" asp-for="@Model.SearchCriteria.UnitPriceFrom" class="form-control" />
+                <span asp-validation-for="@Model.SearchCriteria.UnitPriceFrom" class="text-danger"></span>
+            </div>
+
+            <div class="form-group col-md-6 col-sm-12">
+                <label asp-for="@Model.SearchCriteria.UnitPriceTo">Do kwoty</label>
+                <input type="text" asp-for="@Model.SearchCriteria.UnitPriceTo" class="form-control" />
+                <span asp-validation-for="@Model.SearchCriteria.UnitPriceTo" class="text-danger"></span>
+            </div>
+
+        </div>
+
+       
+
+        <button type="submit" class="btn btn-success btn-block">Szukaj</button>
+    </div>
+
+</form>
+
 <table class="table table-hover table-striped table-dark">
     <thead>
         <tr>
