--- a/WebApp/Pages/Customers/Index.cshtml
+++ b/WebApp/Pages/Customers/Index.cshtml
@@ -63,6 +63,14 @@
 </form>
 
 
+<div>
+    <a asp-page="Create" class="btn btn-primary">
+        <i class="fas fa-plus-circle"></i>
+        <span>Dodaj</span>
+    </a>
+</div>
+
+
 @if (Model.Customers != null)
 {
 
