--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-page="/About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-page="/Contact">Contact</a>
+                            <a class="nav-link text-dark" asp-page="/Contact">Contact</a>
                         </li>
 
                         <li class="nav-item">
@@ -70,5 +70,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
+
+    @await Component.InvokeAsync("Notyf")
 </body>
 </html>
