--- a/WebApp/Pages/Customers/Index.cshtml
+++ b/WebApp/Pages/Customers/Index.cshtml
@@ -107,8 +107,13 @@
                             <a class="btn btn-primary rounded-circle" asp-page="./Details" asp-route-id="@customer.Id">
                                 <i class="fas fa-eye"></i>
                             </a>
+
                             <a class="btn btn-primary rounded-circle" asp-page="./Edit" asp-route-id="@customer.Id">
                                 <i class="fas fa-edit"></i>
+                            </a>
+
+                            <a class="btn btn-danger rounded-circle" asp-page="Delete" asp-route-id="@customer.Id" >
+                                <i class="fas fa-trash"></i>
                             </a>
 
                             <a class="btn btn-secondary rounded-circle" asp-page="./Edit" asp-page-handler="Send" asp-route-id="@customer.Id">
