--- a/WebApp/Pages/Index.cshtml
+++ b/WebApp/Pages/Index.cshtml
@@ -8,3 +8,8 @@
     <h1 class="display-4">Welcome Razor Pages!!!</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+<form method="post">
+    <button type="submit" class="btn btn-dark btn-block">Zapamiętaj mnie</button>
+</form>
