--- a/WebApp/Pages/Customers/Index.cshtml
+++ b/WebApp/Pages/Customers/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/sklep/klienci"
 @model WebApp.Pages.Customers.IndexModel
 @{
+//    TempData.Keep("imie");
 }
 
 
@@ -112,7 +113,7 @@
                                 <i class="fas fa-edit"></i>
                             </a>
 
-                            <a class="btn btn-danger rounded-circle" asp-page="Delete" asp-route-id="@customer.Id" >
+                            <a class="btn btn-danger rounded-circle" asp-page="Delete" asp-route-id="@customer.Id">
                                 <i class="fas fa-trash"></i>
                             </a>
 
@@ -129,5 +130,13 @@
         </tbody>
     </table>
 
+}
+
+
+@if (Model.imie != null)
+{
+    <div>
+        <h3>Klient @Model.imie został usunięty. </h3>
+    </div>
 }
 
